fix error messages alignment and site menu buttons

--- a/station_admin/static/station_admin/client/css/style.css
+++ b/station_admin/static/station_admin/client/css/style.css
@@ -261,6 +261,14 @@ p {
     margin-right: 20px;
 }
 
+.site-menu-button {
+    min-width: 280px;
+}
+
+.site-menu-rent-section {
+    margin-top: 20px;
+}
+
 /* (A) THE BASE */
 .bar {
     padding: 10px;
@@ -268,12 +276,21 @@ p {
     color: #333;
     background: #fafafa;
     border: 1px solid #ccc;
-    position:absolute;
-    top: 10vh;
-    left: 50vh;
+    /*position:absolute;*/
+    /*top: 10vh;*/
+    /*left: 50vh;*/
     z-index: 10;
     animation: fadeOut 2s forwards;
     animation-delay: 5s;
+}
+
+.message-container {
+    /*position: fixed;*/
+    position:fixed;
+    top: 10vh;
+    left: 0;
+    z-index: 10;
+    transform: translate(calc(50vw - 50%));
 }
 
 @keyframes fadeOut {
@@ -288,8 +305,8 @@ p {
   border: 1px solid #4c699b;
 }
 .success {
-  color: #2b7515;
-  background: #ecffd6;
+  color: white;
+  background: var(--dark-green);
   border: 1px solid #617c42;
 }
 .warn {
@@ -298,12 +315,10 @@ p {
   border: 1px solid #87803e;
 }
 .error {
-  color: #ba3939;
-  background: #ffe0e0;
+  color: white;
+  background: var(--red);
   border: 1px solid #a33a3a;
 }
-
-
 
 .styled-table {
     border-collapse: collapse;
